# WarehouseTracker1

./: .replit  main.py  pyproject.toml  replit.nix  web_app.py
attached_assets/: Pasted--ASSI-Warehouse-Management-System-Python-ASSI-Warehou-1742600277895.txt
controllers/: __init__.py  auth.py  expense_controller.py  fund_controller.py  invoice_controller.py  item_controller.py  report_controller.py  supplier_customer_controller.py  warehouse_controller.py
database/: __init__.py  db_setup.py
models/: expense.py  fund.py  invoice.py  item.py  report.py  supplier_customer.py  user.py  warehouse.py
static/css/: rtl.css  styles.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html
templates/errors/: 404.html  500.html
templates/funds/: add.html  list.html  view.html
templates/invoices/: list.html  new_purchase.html  new_sale.html  view.html
templates/items/: add.html  list.html  view.html
templates/reports/: dashboard.html  financial.html  inventory.html  sales.html
templates/warehouses/: add.html  edit.html  inventory.html  list.html  view.html
translations/: __init__.py
translations/ar_SA/: __init__.py  translations.json
translations/ar_SA/LC_MESSAGES/: messages.po
translations/en_US/: __init__.py  translations.json
translations/en_US/LC_MESSAGES/: messages.po
utils/: export.py  language.py  notifications.py
views/: __init__.py  expenses.py  funds.py  invoices.py  items.py  login.py  main_menu.py  reports.py  suppliers_customers.py  warehouses.py
